# soniq

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  run_tests.py  zensical.toml
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
deployment/: Dockerfile.dashboard  Dockerfile.worker  docker-compose.yml  kubernetes.yaml  soniq-dashboard.service  soniq-scheduler.service  soniq-worker.service  supervisor.conf
docs/: index.md  llms-full.txt  llms.txt  quickstart.md  troubleshooting.md  why-soniq.md
docs/_internals/: README.md  architecture.md
docs/api/: hooks.md  index.md  jobs.md  soniq.md  worker.md
docs/cli/: commands.md  index.md
docs/dashboard/: index.md  overview.md
docs/getting-started/: installation.md
docs/guides/: common-patterns.md  cross-service-jobs.md  fastapi.md  index.md  testing.md  transactional-enqueue.md
docs/migration/: from-celery.md  from-rq.md  index.md
docs/production/: deployment-docker-compose.md  deployment-kubernetes.md  deployment-shapes.md  deployment-supervisor.md  deployment-systemd.md  deployment.md  going-to-production.md  index.md  postgres.md  reliability.md
docs/recipes/: cross-service-task-stubs.md  custom-metrics-sink.md  custom-retry-policy.md  email-jobs.md  file-processing.md  index.md  scheduled-reports.md  webhook-delivery.md
docs/reference/: dead-letter.md  glossary.md  index.md
docs/tutorial/: 01-defining-jobs.md  02-running-workers.md  03-retries.md  04-scheduling.md  05-queues.md  06-transactional-enqueue.md
examples/: basic_app.py  file_processing.py  instance_api.py  job_returns_value.py  queue_routing.py  recurring_jobs.py  snooze_on_rate_limit.py  transactional_enqueue.py  webhook_delivery.py
examples/cross_service/: README.md  consumer.py  producer.py
examples/plugins/sentry_breadcrumb/: README.md  pyproject.toml
examples/plugins/sentry_breadcrumb/sentry_breadcrumb/: __init__.py
scripts/: check_no_global_settings.py  lint_features_public_api.py
soniq/: __init__.py  app.py  discovery.py  errors.py  job.py  plugin.py  schedules.py  settings.py  task_ref.py  types.py
soniq/backends/: __init__.py  helpers.py  sqlite.py
soniq/cli/: _context.py  _helpers.py  colors.py  dashboard.py  dead_letter.py  inspect.py  main.py  migrate_status.py  scheduler.py  setup.py  status.py  tasks.py  worker.py
soniq/core/: leadership.py  middleware.py  naming.py  processor.py  queue.py  registry.py  retry.py  worker.py
soniq/dashboard/: __init__.py  app.py  server.py
soniq/features/: __init__.py  dead_letter.py  logging.py  scheduler.py  signing.py  webhooks.py
soniq/observability/: __init__.py  metrics.py  prometheus.py
soniq/testing/: __init__.py  helpers.py  memory_backend.py
soniq/utils/: __init__.py  producer_id.py  rate_limit.py  signals.py
tests/: README.md  conftest.py  db_utils.py
tests/backend/: conftest.py  test_crash_loop.py  test_dequeue.py  test_job_crud.py  test_maintenance.py  test_status_transitions.py  test_unique_dedup.py  test_worker_tracking.py
tests/contract/: test_dashboard_dlq.py  test_enqueue_dedup_race.py  test_queue_stats_keys.py
tests/fixtures/: __init__.py  cli_jobs.py
tests/functional/: conftest.py  test_enqueue.py  test_management.py  test_sqlite_flows.py  test_worker_continuous.py
tests/integration/: __init__.py  conftest.py  test_cli_dashboard_database_url.py  test_concurrent_dequeue.py  test_crash_recovery.py  test_cross_service_enqueue.py  test_dashboard_api.py  test_database_url_integration.py  test_example_plugin_installs.py  test_job_results.py  test_leader_election.py  test_migration_race.py  test_migrations.py  test_missing_handler.py  test_pool_exhaustion.py  test_postgres_backend.py  test_queueing_lock.py  test_scheduler_leader.py  test_setup_bootstrap.py  test_snooze_postgres.py  test_timeout_integration.py  test_transactional_enqueue.py  test_two_instance_bleed.py  test_webhooks.py
tests/smoke/: test_examples.py
tests/unit/: __init__.py  conftest.py  test_advisory_key.py  test_api_consistency.py  test_app_operations.py  test_backend_auto_detection.py  test_backend_param.py  test_clean_imports.py  test_cli_colors.py  test_cli_colors_extended.py  test_cli_commands.py  test_cli_context.py  test_cli_core_handlers.py  test_cli_feature_handlers.py  test_cli_logging_config.py  test_cli_main.py  test_cli_no_global_wrappers.py  test_configuration.py  test_context_manager.py  test_core_flows_memory.py  test_dashboard_drift_endpoint.py  test_dashboard_write_auth.py  test_db_migrations.py  test_db_name_validation.py  test_dead_letter_extended.py  test_dead_letter_ops.py  test_docs_delivery_semantics.py  test_enqueue.py  test_error_classification.py  test_errors.py  test_hooks.py  (+64 more)
(+31 files in other folders)
