[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "soniq-sentry-breadcrumb"
version = "0.1.0"
description = "Sentry breadcrumb plugin for Soniq"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Soniq Authors"}]
dependencies = [
    "soniq>=0.0.2,<0.1.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
sentry = ["sentry-sdk>=1.40"]

# This is the line that wires the plugin into discover_plugins. After
# `pip install soniq-sentry-breadcrumb`, an operator can opt in with
# `--plugins=sentry_breadcrumb` or `SONIQ_PLUGINS=sentry_breadcrumb`.
[project.entry-points."soniq.plugins"]
sentry_breadcrumb = "sentry_breadcrumb:factory"

[tool.setuptools.packages.find]
where = ["."]
include = ["sentry_breadcrumb*"]
